--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         <div class="counter-tab"><span class="counter">0</span>/5</div>
       </div>
       <div class="circle">
-        <img class="umbrella-icon" src="/images/zont4.png" alt="umbrella" />
+        <img class="umbrella-icon" src="./images/zont4.png" alt="umbrella" />
       </div>
       <div class="question-text">
         <p class="question-text-beige">CAN YOU FIND</p>
         <span class="question-text-orange">5 UMBRELLAS?</span>
       </div>
-      <img class="umbrella umbrella1" src="/images/zont1.png" alt="umbrella1" />
-      <img class="umbrella umbrella2" src="/images/zont2.png" alt="umbrella2" />
-      <img class="umbrella umbrella3" src="/images/zont3.png" alt="umbrella3" />
-      <img class="umbrella umbrella5" src="/images/zont5.png" alt="umbrella5" />
-      <img class="umbrella umbrella4" src="/images/zont4.png" alt="umbrella4" />
-      <img class="continue-btn" src="images/knopka.png" alt="continue-button" />
+      <img class="umbrella umbrella1" src="./images/zont1.png" alt="umbrella1" />
+      <img class="umbrella umbrella2" src="./images/zont2.png" alt="umbrella2" />
+      <img class="umbrella umbrella3" src="./images/zont3.png" alt="umbrella3" />
+      <img class="umbrella umbrella5" src="./images/zont5.png" alt="umbrella5" />
+      <img class="umbrella umbrella4" src="./images/zont4.png" alt="umbrella4" />
+      <img class="continue-btn" src=".images/knopka.png" alt="continue-button" />
     </div>
     <script defer type="module" src="./script/main.js"></script>
   </body>
