--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <img class="umbrella umbrella3" src="./images/zont3.png" alt="umbrella3" />
       <img class="umbrella umbrella5" src="./images/zont5.png" alt="umbrella5" />
       <img class="umbrella umbrella4" src="./images/zont4.png" alt="umbrella4" />
-      <img class="continue-btn" src=".images/knopka.png" alt="continue-button" />
+      <img class="continue-btn" src="./images/knopka.png" alt="continue-button" />
     </div>
     <script defer type="module" src="./script/main.js"></script>
   </body>
